Fix subnav line break in Safari, for cx/#2394

--- a/app/assets/stylesheets/pano/app/_subnav.sass
+++ b/app/assets/stylesheets/pano/app/_subnav.sass
@@ -97,6 +97,9 @@
         font-family: 'Material Icons'
         color: $gray
 
+    span
+      display: inline-block
+
   #show-filters-btn
     padding: 8px
     &:hover
